tests/purs/passing/UnicodeIdentifier.purs
module Main where

import Effect.Console (log)

f asgård = asgård

main = log (f "Done")
