tests/purs/failing/ModuleNameApostropheMiddle.purs
-- @shouldFailWith ErrorParsingModule
module Module'NameHasPrime where

import Effect.Console (log)

main = log "Done"
